updating the read me

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-Raceline Optimizer
+# Raceline Optimizer
 
 This Python script is a raceline optimizer designed to analyze race tracks and generate optimized paths. The optimizer utilizes image processing techniques to identify key nodes on the track and estimates the time required for processing.
-Features
+## Features
 
     Image Processing: Utilizes the Python Imaging Library (PIL) to process track images.
     Node Detection: Identifies nodes on the track by detecting black pixels below a specified luminance threshold.
@@ -10,20 +10,20 @@ Features
     Time Estimation: Provides an estimated processing time based on the chosen image size.
     Interactive Interface: User-friendly interface for testing multiple tracks.
 
-Usage
+## Usage
 
-    Run the script, and it will prompt you to select a track from the 'tracks' folder.
-    Enter the desired size for processing (larger than 80).
-    The script will estimate and display the processing time.
-    After processing, it will show the number of nodes detected and a plot of the track nodes.
-    Choose whether to test another track.
+    1. Run the script, and it will prompt you to select a track from the 'tracks' folder.
+    2. Enter the desired size for processing (larger than 80, usually around 200).
+    3. The script will estimate and display the processing time.
+    4. After processing, it will show the number of nodes detected and a plot of the track nodes.
+    5. Choose whether to test another track.
 
-Dependencies
+## Dependencies
 
     PIL (Pillow)
     Matplotlib
 
-Future Development
+## Future Development
 
 The script will be extended to include path optimization algorithms, such as piecewise cubic Hermite splines, to further enhance raceline optimization.
 
